--- a/package.json
+++ b/package.json
@@ -1,23 +1,15 @@
 {
-    "name": "real-estate",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "type": "module",
-    "scripts": {
-        "dev": "nodemon api/index.js",
-        "start": "node api/index.js",
-        "build" : "npm install && npm install --prefix client && npm run build --prefix client"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies":{
-        "bcryptjs": "^2.4.3",
-        "cookie-parser": "^1.4.6",
-        "dotenv": "^16.4.5",
-        "express": "^4.19.2",
-        "jsonwebtoken": "^9.0.2",
-        "mongodb": "^6.8.1",
-        "mongoose": "^8.6.1"}
+  "name": "mernblog",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "type":"module",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.21.2"
+  }
 }
